--- a/modules/api/package.json
+++ b/modules/api/package.json
@@ -5,6 +5,7 @@
     "eslint": "^8.36.0"
   },
   "dependencies": {
+    "@aws-sdk/client-sns": "^3.292.0",
     "axios": "^1.3.4",
     "env-var": "^7.3.0",
     "express": "^4.18.2"
