--- a/copilot/pipelines/tms-pipeline/buildspec.yml
+++ b/copilot/pipelines/tms-pipeline/buildspec.yml
@@ -3,7 +3,9 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      ruby: 2.6
+      docker: 20
+      ruby: 3.1
+      nodejs: 16
     commands:
       - echo "cd into $CODEBUILD_SRC_DIR"
       - cd $CODEBUILD_SRC_DIR
